Top cut off and cant scroll up issue fixed

--- a/css/style.scss
+++ b/css/style.scss
@@ -177,8 +177,14 @@ main {
 /* ---------- FOOTER END ---------- */
 
 @media screen and (max-width: 375px) {
+  .wrapper {
+    margin: auto;
+    justify-content: flex-start;
+    align-items: flex-start;
+  }
+
   .content {
-    margin: 0 30px 0 30px;
+    margin: 60px 30px 60px 30px;
   }
 
   header {
